Added options to sort by artists, albums

--- a/src/Templates/advanced.template
+++ b/src/Templates/advanced.template
@@ -10,7 +10,7 @@
 					tracks.id=multilibrary_track.track and
 					multilibrary_track.library=[% library %]
 				[%- END %]
-				[%- IF includedartists %]
+				[%- IF includedartists or orderby == 'artist' or orderby == 'artistalbum' %]
 				join contributor_track on
 					tracks.id=contributor_track.track
 				join contributors on
@@ -38,6 +38,10 @@
 				[%- IF excludedcomment %]
 				left join comments as excludecomments on
 					tracks.id=excludecomments.track and excludecomments.value like [% excludedcomment %]
+				[%- END %]
+				[%- IF orderby == 'album' or orderby == 'artistalbum' %]
+				left join albums on
+					tracks.album=albums.id
 				[%- END %]
 				where
 					audio=1
@@ -88,10 +92,10 @@
 				[%- IF recentlyplayed %]
 					and ifnull(track_statistics.lastplayed,0)&lt;(unix_timestamp()-[% recentlyplayed %])
 				[%- END %]
-				[%- IF includedcomment or includedartist or includedgenres %]
+				[%- IF includedcomment or includedartist or includedgenres or orderby == 'album' or orderby == 'artist' or orderby == 'artistalbum' %]
 				group by tracks.id
 				[%- END %]
-				order by  [% IF orderby == 'random' %][% RANDOMFUNCTION %][% ELSIF trackstat %][% IF orderby == 'lastadded' %]track_statistics.added desc[% ELSIF orderby == 'toprated' %]track_statistics.rating desc[% ELSIF orderby == 'mostplayed' %]track_statistics.playcount desc[% END %][% ELSE %][% IF orderby == 'lastadded' %]tracks_persistent.added desc[% ELSIF orderby=='toprated' %]tracks_persistent.rating desc[% ELSIF orderby=='mostplayed' %]tracks_persistent.playcount desc[% END %][% END %]
+				order by  [% IF orderby == 'random' %][% RANDOMFUNCTION %][% ELSIF orderby == 'album' %]albums.titlesort,tracks.disc,tracks.tracknum[% ELSIF orderby == 'artistalbum' %]contributors.namesort,albums.titlesort,tracks.disc,tracks.tracknum[% ELSIF orderby == 'artist' %]contributors.namesort,[% RANDOMFUNCTION %][% ELSIF trackstat %][% IF orderby == 'lastadded' %]track_statistics.added desc[% ELSIF orderby == 'toprated' %]track_statistics.rating desc[% ELSIF orderby == 'mostplayed' %]track_statistics.playcount desc[% END %][% ELSE %][% IF orderby == 'lastadded' %]tracks_persistent.added desc[% ELSIF orderby=='toprated' %]tracks_persistent.rating desc[% ELSIF orderby=='mostplayed' %]tracks_persistent.playcount desc[% END %][% END %]
 				[% IF nooftracks %]limit [% nooftracks %][% END %]
 		</statement>
 		[% IF customskipfilter %]
